update CustomFileUpload drag zone styles to fix overflow

--- a/frontend-service/src/ui/views/_components/CustomFileUpload/CustomFileUpload.module.scss
+++ b/frontend-service/src/ui/views/_components/CustomFileUpload/CustomFileUpload.module.scss
@@ -19,6 +19,7 @@
   padding: 1em;
   position: relative;
   transition: border-color 0.3s;
+  overflow: hidden;
 }
 
 .p-fileupload-content.p-fileupload-highlight {
